--- a/src/Sheboygan/Views/Home/Index.cshtml
+++ b/src/Sheboygan/Views/Home/Index.cshtml
@@ -21,8 +21,9 @@
             font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
         }
 
-        #rootList { list-style-type: none; margin-left: -20px; }
-            #rootList li { list-style-type: none; }
+        #layerRoot { list-style-type: none; margin-top: 10px; margin-left: 10px; }
+        #layerRoot li { list-style-type: none; }
+        #layerRoot ul.groupChildren { margin-top: 0; margin-bottom: 0; }
     </style>
 </head>
 <body>
@@ -63,7 +64,7 @@
 
     <div id="map" class="sidebar-map"></div>
 
-    <a href="https://github.com/Turbo87/sidebar-v2/"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/jumpinjackie/mapguide-mvc6-sample"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/openlayers3-dist/ol-debug.js" type="text/javascript"></script>
