--- a/src/Sheboygan/Views/Home/TaskPaneHome.cshtml
+++ b/src/Sheboygan/Views/Home/TaskPaneHome.cshtml
@@ -1,4 +1,5 @@
-﻿<html>
+﻿@model Sheboygan.Models.MapGuideViewModel
+<html>
     <head>
         <title>Task Pane Home</title>
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
@@ -12,6 +13,10 @@
                 <li><a target="_blank" href="https://get.asp.net/">ASP.net 5 - MVC 6</a></li>
                 <li><a target="_blank" href="https://github.com/Turbo87/sidebar-v2">sidebar-v2</a></li>
                 <li><a target="_blank" href="http://www.openlayers.org">OpenLayers</a></li>
+            </ul>
+            <p>Some samples</p>
+            <ul>
+                <li><a href="@Url.MgAction("Search", "Index", Model.Session, Model.MapName)">Search</a></li>
             </ul>
         </div>
     </body>
