Port over DWF plot sample

--- a/src/Sheboygan/Views/Home/TaskPaneHome.cshtml
+++ b/src/Sheboygan/Views/Home/TaskPaneHome.cshtml
@@ -17,6 +17,7 @@
             <p>Some samples</p>
             <ul>
                 <li><a href="@Url.MgAction("Search", "Index", Model.Session, Model.MapName)">Search</a></li>
+                <li><a href="@Url.MgAction("DwfPlot", "Index", Model.Session, Model.MapName)">DWF Plot</a></li>
             </ul>
         </div>
     </body>
