#2: - Add current experimental MapGuideDotNetApi package - Restore the following controllers:   - MgBaseController   - MapAgentController - Make entrypoint bootstrap a mapguide-react-layout viewer instance from a dynamically prepared Web Layout document

--- a/src/MvcCoreSample/Views/Home/About.cshtml
+++ b/src/MvcCoreSample/Views/Home/About.cshtml
@@ -2,6 +2,6 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Source for this sample: <a href="https://github.com/jumpinjackie/mapguide-mvc-core-sample">https://github.com/jumpinjackie/mapguide-mvc-core-sample</a></p>
+<p>Source for .net bindings: <a href="https://github.com/jumpinjackie/mapguide-api-bindings">https://github.com/jumpinjackie/mapguide-api-bindings</a></p>
