--- a/src/MvcCoreSample/Views/Tasks/Home.cshtml
+++ b/src/MvcCoreSample/Views/Tasks/Home.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Basic Samples";
 }
 <ul class="list-group">
-    <li class="list-group-item">@Html.ActionLink("Hello Map", "HelloMap")</li>
-    <li class="list-group-item">@Html.ActionLink("Hello Viewer", "HelloViewer")</li>
-    <li class="list-group-item">@Html.ActionLink("Interacting With Layers", "InteractingWithLayers")</li>
-    <li class="list-group-item">@Html.ActionLink("Working With Feature Data", "WorkingWithFeatures")</li>
-    <li class="list-group-item">@Html.ActionLink("Modifying Maps and Layers", "ModifyingMapsAndLayers")</li>
-    <li class="list-group-item">@Html.ActionLink("Analyzing Features", "AnalyzingFeatures")</li>
-    <li class="list-group-item">@Html.ActionLink("Digitizing and Redlining", "DigitizingAndRedlining")</li>
-    <li class="list-group-item">@Html.ActionLink("Custom Output", "CustomOutput")</li>
+    <li class="list-group-item">@Html.ActionLink("Hello Map", "HelloMap", Model)</li>
+    <li class="list-group-item">@Html.ActionLink("Hello Viewer", "HelloViewer", Model)</li>
+    <li class="list-group-item">@Html.ActionLink("Interacting With Layers", "InteractingWithLayers", Model)</li>
+    <li class="list-group-item">@Html.ActionLink("Working With Feature Data", "WorkingWithFeatures", Model)</li>
+    <li class="list-group-item">@Html.ActionLink("Modifying Maps and Layers", "ModifyingMapsAndLayers", Model)</li>
+    <li class="list-group-item">@Html.ActionLink("Analyzing Features", "AnalyzingFeatures", Model)</li>
+    <li class="list-group-item">@Html.ActionLink("Digitizing and Redlining", "DigitizingAndRedlining", Model)</li>
+    <li class="list-group-item">@Html.ActionLink("Custom Output", "CustomOutput", Model)</li>
 </ul>
