--- a/src/MvcCoreSample/Views/Samples/CustomOutput.cshtml
+++ b/src/MvcCoreSample/Views/Samples/CustomOutput.cshtml
@@ -3,16 +3,46 @@
     Layout = "_TaskPaneContent";
     ViewData["Title"] = "Custom Output";
 }
+@section ScriptsHeader {
+<script type="text/javascript">
+    function submitRequest(pageUrl)
+    {
+        var map = parent.parent.mapFrame;
+        xmlSel = map.GetSelectionXML();
+        mapScale = map.GetScale();
+        mapHeight = 300;
+        mapWidth = 300;
+        mapCenter = map.GetCenter();
+        params = [
+            "SESSION", map.GetSessionId(),
+            "MAPNAME", map.GetMapName(),
+            "SELECTION", xmlSel,
+            "SCALE", mapScale,
+            "HEIGHT", mapHeight,
+            "WIDTH", mapWidth,
+            "CENTERX", mapCenter.X,
+            "CENTERY", mapCenter.Y
+        ];
+        parent.parent.formFrame.Submit(pageUrl, params, "_blank");
+    }
+</script>
+}
+@section Scripts {
+<script type="text/javascript">
+    parent.parent.mapFrame.Refresh();
+    parent.parent.mapFrame.ZoomToScale(9999);
+</script>
+}
 <div class="list-group">
-    <a class="list-group-item" href="@Url.Action("PropertyReport", Model)">
+    <a class="list-group-item" href="#" onclick="submitRequest('@Url.Action("PropertyReport", Model)'); return false">
         <h4 class="list-group-item-heading">Property Report</h4>
         <p class="list-group-item-text">Create a printable page with an inset image of the selected property. You must select one parcel on the map first before clicking this</p>
     </a>
-    <a class="list-group-item" href="@Url.Action("EPlot", Model)">
+    <a class="list-group-item" target="_blank" href="@Url.Action("EPlot", Model)">
         <h4 class="list-group-item-heading">ePlot</h4>
         <p class="list-group-item-text">Create and display an ePlot. Requires Autodesk DWF Viewer or Autodesk Design Review on the client system.</p>
     </a>
-    <a class="list-group-item" href="@Url.Action("MultiPlot", Model)">
+    <a class="list-group-item" target="_blank" href="@Url.Action("MultiPlot", Model)">
         <h4 class="list-group-item-heading">Multi-plot</h4>
         <p class="list-group-item-text">Create and display a multi-plot ePlot. Requires Autodesk DWF Viewer or Autodesk Design Review on the client system.</p>
     </a>
