#2: Implement "Analyzing Features" section of devguide. Add a shared FrameAutoRefresh view to auto-refresh the map viewer. Primarily used for routes that are expected to run in any of the background frames.

--- a/src/MvcCoreSample/Views/Samples/ModifyingMapsAndLayers.cshtml
+++ b/src/MvcCoreSample/Views/Samples/ModifyingMapsAndLayers.cshtml
@@ -4,19 +4,19 @@
     ViewData["Title"] = "Working With Feature Data";
 }
 <div class="list-group">
-    <a class="list-group-item" href="@Url.Action("ShowBuildingsAfter1980", Model)">
+    <a class="list-group-item" target="scriptFrame" href="@Url.Action("ShowBuildingsAfter1980", Model)">
         <h4 class="list-group-item-heading">Change layers via DOM</h4>
         <p class="list-group-item-text">Show buildings built after 1980</p>
     </a>
-    <a class="list-group-item" href="@Url.Action("ShowSquareFootage", Model)">
+    <a class="list-group-item" target="scriptFrame" href="@Url.Action("ShowSquareFootage", Model)">
         <h4 class="list-group-item-heading">Create Square Footage Layer</h4>
         <p class="list-group-item-text">Show a map themed by areas.</p>
     </a>
-    <a class="list-group-item" href="@Url.Action("ShowHydroLine", Model)">
+    <a class="list-group-item" target="scriptFrame" href="@Url.Action("ShowHydroLine", Model)">
         <h4 class="list-group-item-heading">Create Hydro Line Layer</h4>
         <p class="list-group-item-text">Show a map themed by lines.</p>
     </a>
-    <a class="list-group-item" href="@Url.Action("ShowPointsOfInterest", Model)">
+    <a class="list-group-item" target="scriptFrame" href="@Url.Action("ShowPointsOfInterest", Model)">
         <h4 class="list-group-item-heading">Create Points of Interest Layer</h4>
         <p class="list-group-item-text">Show a map themed by points.</p>
     </a>
