--- a/src/MvcCoreSample/Views/Home/About.cshtml
+++ b/src/MvcCoreSample/Views/Home/About.cshtml
@@ -5,3 +5,4 @@
 
 <p>Source for this sample: <a href="https://github.com/jumpinjackie/mapguide-mvc-core-sample">https://github.com/jumpinjackie/mapguide-mvc-core-sample</a></p>
 <p>Source for .net bindings: <a href="https://github.com/jumpinjackie/mapguide-api-bindings">https://github.com/jumpinjackie/mapguide-api-bindings</a></p>
+<p>Viewer provided by mapguide-react-layout: <a href="https://github.com/jumpinjackie/mapguide-react-layout">https://github.com/jumpinjackie/mapguide-react-layout</a></p>
