--- a/src/MvcCoreSample/Views/Home/About.cshtml
+++ b/src/MvcCoreSample/Views/Home/About.cshtml
@@ -4,5 +4,5 @@
 <h2>@ViewData["Title"]</h2>
 
 <p>Source for this sample: <a href="https://github.com/jumpinjackie/mapguide-mvc-core-sample">https://github.com/jumpinjackie/mapguide-mvc-core-sample</a></p>
-<p>Source for .net bindings: <a href="https://github.com/jumpinjackie/mapguide-api-bindings">https://github.com/jumpinjackie/mapguide-api-bindings</a></p>
+<p>.net bindings included in nuget packages bundled with MapGuide Open Source 4.0 Preview 4 and newer releases</p>
 <p>Viewer provided by mapguide-react-layout: <a href="https://github.com/jumpinjackie/mapguide-react-layout">https://github.com/jumpinjackie/mapguide-react-layout</a></p>
