--- a/src/MvcCoreSample/Views/Home/Index.cshtml
+++ b/src/MvcCoreSample/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
 
 <div class="jumbotron">
     <div class="container">
-        <h1>MapGuide MVC Core Sample</h1>
-        <p>Welcome to the MapGuide MVC Core Sample</p>
-        <p>This is an ASP.net core sample application using the new cross-platform <strong>MapGuideDotNetApi</strong> package</p>
+        <h1>MapGuide ASP.net Core Sample</h1>
+        <p>Welcome to the MapGuide ASP.net Core Sample</p>
+        <p>This is an ASP.net core 6.0 sample application using the new cross-platform MapGuide API nuget packages</p>
     </div>
 </div>
  <a href="@Url.Action("Main")" class="btn btn-primary btn-block">Run Sample</a> 
