--- a/src/MvcCoreSample/Views/Samples/ModifyingMapsAndLayers.cshtml
+++ b/src/MvcCoreSample/Views/Samples/ModifyingMapsAndLayers.cshtml
@@ -1,7 +1,7 @@
 @model MvcCoreSample.Models.MapGuideCommandModel
 @{
     Layout = "_TaskPaneContent";
-    ViewData["Title"] = "Working With Feature Data";
+    ViewData["Title"] = "Modifying Maps and Layers";
 }
 <div class="list-group">
     <a class="list-group-item" target="scriptFrame" href="@Url.Action("ShowBuildingsAfter1980", Model)">
